--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
         <tr>
           <td width="100%" valign="middle">
             <heading>🔥News🔥</heading><br>
-            <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video.</li>
+            <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video. 🌟🌟</li>
             <li> <span style="color: red;">[NEW!-2024/02]</span> One full paper is accepted by CVPR-24 about <a href="https://haofei.vip/Dysen-VDM/">Text-to-Video Generation</a>. Congrats to all my co-authors. </li>
+            <li> <span style="color: red;">[NEW!-2024/01]</span> I honor Baidu Scholarship (10 people worldwide). 🥳🥳🥳 </li>
             <li> <span style="color: red;">[NEW!-2023/12]</span> I have successfully passed my Rearcsh-based QE, I am now a Ph.D. Candidate. 🥳🥳🥳  </li>
-            <li> <span style="color: red;">[NEW!-2023/11]</span> I’ll join <a href="">Kunlun 2050 Research</a>  as a research intern, advised by <a href="https://yanshuicheng.info/">Prof. Yan</a>. 😆 </li>
+            <li> <span style="color: red;">[NEW!-2023/11]</span> I'll join <a href="">Kunlun 2050 Research</a>  as a research intern, advised by <a href="https://yanshuicheng.info/">Prof. Yan</a>. 😆 </li>
             <li> <span style="color: red;">[NEW!-2023/10]</span> We build <a href="https://next-gpt.github.io/">NExT-GPT</a>, a general-purpose any-to-any MLLM. 🌟 </li>
             <li> <span style="color: red;">[NEW!-2023/09]</span> One full paper is accepted in <a href="https://neurips.cc/Conferences/2023">NeurIPS-23</a>, about <a href="https://openreview.net/pdf?id=hSTaTBIUCj">Intricate Text-to-image Generation</a>  based on Scene Graph. 🥳</li>
             <li> <span style="color: red;">[NEW!-2023/07]</span> One full paper is accepted in <a href="https://www.acmmm2023.org/">ACM MM-23</a>, about <a href="https://arxiv.org/pdf/2308.05095.pdf">High-faithfull Text-to-image Generation</a> enhanced with layout.</li>
@@ -168,10 +169,10 @@
                 <td width="100%">
                   <ul>
                     <li>
-                      Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Tat-Seng Chua.&nbsp&nbsp<em>Dysen-VDM: Empowering Dynamics-aware Text-to-Video Diffusion with LLMs.</em>. In Proceedings of CVPR. 2024.&nbsp&nbsp<a href="https://haofei.vip/Dysen-VDM/">[Code]</a><a href="https://arxiv.org/pdf/2308.13812">[pdf]</a>
+                      Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Tat-Seng Chua.&nbsp&nbsp<em>Dysen-VDM: Empowering Dynamics-aware Text-to-Video Diffusion with LLMs</em>. In Proceedings of <strong>CVPR</strong>. 2024.&nbsp&nbsp<a href="https://haofei.vip/Dysen-VDM/">[Code]</a><a href="https://arxiv.org/pdf/2308.13812">[pdf]</a>
                     </li>
                     <li>
-                      Hao Fei, <strong>Shengqiong Wu</strong>, Hanwang Zhang, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>VITRON: A Unified Pixel-level Vision LLM for Understanding, Generating, Segmenting, Editing.</em>. In Proceedings of arXiv. 2024.&nbsp&nbsp<a href="https://vitron-llm.github.io/">[Code]</a><a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">[pdf]</a>
+                      Hao Fei, <strong>Shengqiong Wu</strong>, Hanwang Zhang, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>VITRON: A Unified Pixel-level Vision LLM for Understanding, Generating, Segmenting, Editing</em>. <strong>arXiv</strong>. 2024.&nbsp&nbsp<a href="https://vitron-llm.github.io/">[Code]</a><a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">[pdf]</a>
                     </li>
                     </ul>
                 </td>
@@ -184,13 +185,16 @@
                 <td width="100%">
                 <ul>
                   <li>
-                    <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. Under reviewing. 2023.&nbsp&nbsp<a href="https://next-gpt.github.io/">[Code]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
+                    <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. <strong>arXiv</strong>. 2023.&nbsp&nbsp<a href="https://next-gpt.github.io/">[Code | 2.9k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
                   </li>
                   <li>
                     <strong>Shengqiong Wu</strong>, Hao Fei, Hanwang Zhang, Tat-Seng Chua.&nbsp&nbsp<em>Imagine That! Abstract-to-Intricate Text-to-Image Synthesis with Scene Graph Hallucination Diffusion</em>. In Proceedings of <strong>NeurIPS</strong>. 2023.&nbsp&nbsp(long, poster)&nbsp&nbsp<a href="https://github.com/ChocoWu/T2I-Salad">[Code]</a><a href="https://openreview.net/forum?id=hSTaTBIUCj">[pdf]</a>
                   </li>
                   <li>
                     Leigang Qu*, <strong>Shengqiong Wu*</strong>, Hao Fei, Liqiang Nie, Tat-Seng Chua.&nbsp&nbsp<em>LayoutLLM-T2I: Eliciting Layout Guidance from LLM for Text-to-Image Generation</em>. In Proceedings of <strong>ACM MM</strong>. 2023.&nbsp&nbsp(*: equal contribution, long)&nbsp&nbsp<a href="https://layoutllm-t2i.github.io/">[Code]</a><a href="https://arxiv.org/pdf/2308.05095.pdf">[pdf]</a>
+                  </li>
+                  <li>
+                    Bobo Li, Hao Fei, Yuhan Wu, Jinsong Zhang, <strong>Shengqiong Wu</strong>, Jingye Li, Yijiang Liu, Lizi Liao, Tat-Seng Chua, Fei Li, Donghong Ji.&nbsp&nbsp<em>DiaASQ: A benchmark of conversational aspect-based sentiment quadruple analysis</em>.In Proceedings of <strong>ACL</strong>. 2023.&nbsp&nbsp(long, poster)&nbsp&nbsp<a href="https://github.com/unikcc/DiaASQ">[Code]</a><a href="https://aclanthology.org/2023.findings-acl.849.pdf">[pdf]</a>
                   </li>
                   <li>
                     <strong>Shengqiong Wu</strong>, Hao Fei, Yixin Cao, Lidong Bing, Tat-Seng Chua.&nbsp&nbsp<em>Information Screening whilst Exploiting! Multimodal Relation Extraction with Feature Denoising and Multimodal Topic Modeling</em>. In Proceedings of <strong>ACL</strong>. 2023.&nbsp&nbsp(long, poster, paper award nomination, 1.6%)&nbsp&nbsp<a href="https://github.com/ChocoWu/MRE-ISE">[Code]</a><a href="https://aclanthology.org/2023.acl-long.823.pdf">[pdf]</a>
@@ -214,6 +218,7 @@
                   <li>
                     Shunjie Chen, Xiaochuan Shi, Jingye Li, <strong>Shengqiong Wu</strong>, Hao Fei, Fei Li, Donghong Ji.&nbsp&nbsp<em>Joint Alignment of Multi-Task Feature and Label Spaces for Emotion Cause Pair Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, poster) <a href="https://github.com/csj199813/A2Net_ECPE">[Code]</a><a href="https://arxiv.org/abs/2209.04112">[pdf]</a>
                   </li>
+                  <li>
                     Hu Cao, Jingye Li, Fangfang Su, Fei Li, Hao Fei, <strong>Shengqiong Wu</strong>, Bobo Li, Liang Zhao and Donghong Ji.&nbsp&nbsp<em>OneEE: A One-Stage Framework for Fast Overlapping and Nested Event Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, oral) <a href="https://github.com/Cao-Hu/OneEE">[Code]</a><a href="https://arxiv.org/abs/2209.02693">[pdf]</a>
                   </li>
                   <li>
@@ -252,7 +257,7 @@
               <tr>
                 <td width="100%"><ul>
                   <li>
-                    <strong>ShengqiongWu</strong>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral)<a href="https://github.com/ChocoWu/ALD-TN">[Code]</a><a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60450-9_54">[pdf]</a>
+                    <strong>ShengqiongWu</strong>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral) <a href="https://github.com/ChocoWu/ALD-TN">[Code]</a><a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60450-9_54">[pdf]</a>
                   </li>
                 </ul></td>
               </tr>
@@ -276,15 +281,15 @@
                   <td width="100%"><strong>Conference Reviewer</strong></td>
                 </tr>
                 <tr>
-                  <td style="padding-left: 40px; padding-top: 4px;" width="100%">
-                      WSDM-23, NeurIPS-23, ICLR-24, ICML-24, ACM MM-23/24, IJCAI-23/24, AAAI-24
+                  <td style="padding-left: 40px;" width="100%">
+                      WSDM-23, NeurIPS-23, ICLR-24, ICML-24, ACM MM-23/24, IJCAI-23/24, AAAI-24, ACL-23/24
                     </td>
                 </tr>
                 <tr>
                   <td style="padding-top: 4px;" width="100%"><strong>Journal Reviewer</strong></td>
                 </tr>
                 <tr>
-                  <td style="padding-left: 40px; padding-top: 3px;" width="100%">
+                  <td style="padding-left: 40px;" width="100%">
                     <!-- <li> -->
                       TOMM, IEEE/ACM TALLIP, IPM, KBS, Neurocomputing
                     <!-- </li> -->
@@ -331,7 +336,7 @@
                 <tr>
                   <td width="90%">
                       <br>
-                      Oct. 2023 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
+                      Nov. 2023 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 2050 Research Intern <br>
                         <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <i>Crawl web-data related to financial stock. Construct knowledge graph for Smart Q&A. Employ graph database (Neo4j) for data storage.</i><br> -->
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://yanshuicheng.info/"> Shuicheng Yan, Director </a> <br>
@@ -386,6 +391,7 @@
               <li>[2024] &nbsp&nbsp <a href="https://www.sohu.com/a/754077156_132450">Scholarship (Top 10 Global Recipients)</a>, Baidu.</li>
               <li>[2023] &nbsp&nbsp Research Achievement Award of SoC, NUS.</li>
               <li>[2022] &nbsp&nbsp President's Graduate Fellowship of NUS.</li>
+              <li>[2022] &nbsp&nbsp Award of Excellent Master Thesis of Hubei Cyberspace Security Society.</li>
               <li>[2022] &nbsp&nbsp Excellent Graduated Graduate Student.</li>
               <li>[2021] &nbsp&nbsp Huawei Scholarship for graduate students.</li>
               <li>[2021] &nbsp&nbsp National Scholarship for graduate students.</li>
