--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
                 <td width="100%">
                   <ul>
                     <li>
+                      <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. In Proceedings of <strong>ICML</strong>. 2023.&nbsp&nbsp<a href="https://next-gpt.github.io/">[Code | 2.9k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
+                    </li>
+                    <li>
+                      Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Meishan Zhang, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>Video-of-Thought: Step-by-Step Video Reasoning from Perception to Cognition</em>. In Proceedings of <strong>ICML</strong>. 2023.
+                    </li>
+                    
+                    <li>
                       Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Tat-Seng Chua.&nbsp&nbsp<em>Dysen-VDM: Empowering Dynamics-aware Text-to-Video Diffusion with LLMs</em>. In Proceedings of <strong>CVPR</strong>. 2024.&nbsp&nbsp<a href="https://haofei.vip/Dysen-VDM/">[Code]</a><a href="https://arxiv.org/pdf/2308.13812">[pdf]</a>
                     </li>
                     <li>
@@ -185,9 +192,7 @@
               <tr>
                 <td width="100%">
                 <ul>
-                  <li>
-                    <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. <strong>arXiv</strong>. 2023.&nbsp&nbsp<a href="https://next-gpt.github.io/">[Code | 2.9k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
-                  </li>
+                  
                   <li>
                     <strong>Shengqiong Wu</strong>, Hao Fei, Hanwang Zhang, Tat-Seng Chua.&nbsp&nbsp<em>Imagine That! Abstract-to-Intricate Text-to-Image Synthesis with Scene Graph Hallucination Diffusion</em>. In Proceedings of <strong>NeurIPS</strong>. 2023.&nbsp&nbsp(long, poster)&nbsp&nbsp<a href="https://github.com/ChocoWu/T2I-Salad">[Code]</a><a href="https://openreview.net/forum?id=hSTaTBIUCj">[pdf]</a>
                   </li>
