--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <tr>
           <td width="100%" valign="middle">
             <heading>🔥News🔥</heading><br>
+            <li> <span style="color: red;">[NEW!-2024/08]</span> 🐾I’m excited to have the opportunity to be a <em>volunteer</em> at ACL 2024. Looking forward to being part of it!</li>
             <li> <span style="color: red;">[NEW!-2024/05]</span> Congration 🥳🥳🥳, two full papers are accpted in ICML-24, <a href="">NExT-GPT</a>  and  <a href="">Video-of-Thought</a> .</li>
             <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video. 🌟🌟</li>
             <li> <span style="color: red;">[NEW!-2024/02]</span> One full paper is accepted by CVPR-24 about <a href="https://haofei.vip/Dysen-VDM/">Text-to-Video Generation</a>. Congrats to all my co-authors. </li>
@@ -170,10 +171,16 @@
                 <td width="100%">
                   <ul>
                     <li>
-                      <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. In Proceedings of <strong>ICML</strong>. 2023.&nbsp&nbsp<a href="https://next-gpt.github.io/">[Code | 2.9k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
+                      <strong>Shengqiong Wu</strong>, Hao Fei, Xiangtai Li, Jiayi Ji, Hanwang Zhang, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>Towards Semantic Equivalence of Tokenization in Multimodal LLM</em>. <strong>arXiv</strong>. 2024.&nbsp&nbsp<a href="https://chocowu.github.io/SeTok-web/">[Code]</a><a href="https://arxiv.org/pdf/2406.05127">[pdf]</a>
                     </li>
                     <li>
-                      Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Meishan Zhang, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>Video-of-Thought: Step-by-Step Video Reasoning from Perception to Cognition</em>. In Proceedings of <strong>ICML</strong>. 2023.
+                      Meng Luo, Hao Fei*, Bobo Li, <strong>Shengqiong Wu</strong>, Qian Liu, Soujanya Poria, Erik Cambria, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>PanoSent: A Panoptic Sextuple Extraction Benchmark for Multimodal Conversational Aspect-based Sentiment Analysis</em>. In Proceedings of <strong>ACM MM</strong>. 2024.&nbsp&nbsp (Oral).
+                    </li>
+                    <li>
+                      <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. In Proceedings of <strong>ICML</strong>. 2024.&nbsp&nbsp (Oral) <a href="https://next-gpt.github.io/">[Code | 3.2k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
+                    </li>
+                    <li>
+                      Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Meishan Zhang, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>Video-of-Thought: Step-by-Step Video Reasoning from Perception to Cognition</em>. In Proceedings of <strong>ICML</strong>. 2024.&nbsp&nbsp (Oral) <a href="https://github.com/scofield7419/Video-of-Thought">[Code]</a><a href="https://haofei.vip/downloads/papers/VoT_2024.pdf">[pdf]</a> 
                     </li>
                     
                     <li>
@@ -342,7 +349,7 @@
                 <tr>
                   <td width="90%">
                       <br>
-                      Nov. 2023 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
+                      Nov. 2023 - Jun. 2024 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 2050 Research Intern <br>
                         <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <i>Crawl web-data related to financial stock. Construct knowledge graph for Smart Q&A. Employ graph database (Neo4j) for data storage.</i><br> -->
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://yanshuicheng.info/"> Shuicheng Yan, Director </a> <br>
