--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           <td width="100%" valign="middle">
             <heading>🔥News🔥</heading><br>
             <li> <span style="color: red;">[NEW!-2024/08]</span> 🐾I’m excited to have the opportunity to be a <em>volunteer</em> at ACL 2024. Looking forward to being part of it!</li>
-            <li> <span style="color: red;">[NEW!-2024/05]</span> Congration 🥳🥳🥳, two full papers are accpted in ICML-24, <a href="">NExT-GPT</a>  and  <a href="">Video-of-Thought</a> .</li>
+            <li> <span style="color: red;">[NEW!-2024/08]</span> I have tried to build <a href="https://aistudio.baidu.com/projectdetail/8168280">NExT-GPT</a> in <a href="https://www.paddlepaddle.org.cn/">PaddlePaddle</a>, <a href="https://github.com/PaddlePaddle/PaddleNLP">PaddleNLP</a> and <a href="https://github.com/PaddlePaddle/PaddleMIX/tree/release/2.0/ppdiffusers">PPDiffusers</a>. Still working on it. 🤔🤔</li>
+            <li> <span style="color: red;">[NEW!-2024/05]</span> Congratulations! 🥳🥳🥳, two full papers are accpted in ICML-24, <a href="">NExT-GPT</a>  and  <a href="">Video-of-Thought</a> .</li>
             <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video. 🌟🌟</li>
             <li> <span style="color: red;">[NEW!-2024/02]</span> One full paper is accepted by CVPR-24 about <a href="https://haofei.vip/Dysen-VDM/">Text-to-Video Generation</a>. Congrats to all my co-authors. </li>
             <li> <span style="color: red;">[NEW!-2024/01]</span> I honor Baidu Scholarship (10 people worldwide). 🥳🥳🥳 </li>
