--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
           <tbody><tr>
             <td width="100%" valign="middle">
               <heading>Honors &amp; Awards</heading><br><br>
+              <li>[2024] &nbsp&nbsp Google PhD Fellowship. Google.</li>
               <li>[2024] &nbsp&nbsp <a href="https://www.sohu.com/a/754077156_132450">Scholarship (Top 10 Global Recipients)</a>, Baidu.</li>
               <li>[2023] &nbsp&nbsp Research Achievement Award of SoC, NUS.</li>
               <li>[2022] &nbsp&nbsp President's Graduate Fellowship of NUS.</li>
