--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 </tr>
                 <tr>
                   <td style="padding-left: 40px;" width="100%">
-                      WSDM-23, NeurIPS-23, ICLR-24, ICML-24, ACM MM-23/24, IJCAI-23/24, AAAI-24, ACL-23/24
+                      NeurIPS-23/24, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
                     </td>
                 </tr>
                 <tr>
