--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                 <li> <span style="color: red;">[NEW!-2023/12]</span> I have successfully passed my Rearcsh-based QE, I am now a Ph.D. Candidate. 🥳🥳🥳  </li>
                 <li> <span style="color: red;">[NEW!-2023/11]</span> I'll join <a href="">Kunlun 2050 Research</a>  as a research intern, advised by <a href="https://yanshuicheng.info/">Prof. Yan</a>. 😆 </li>
                 <li> <span style="color: red;">[NEW!-2023/10]</span> We build <a href="https://next-gpt.github.io/">NExT-GPT</a>, a general-purpose any-to-any MLLM. 🌟 </li>
-                <li> <span style="color: red;">[NEW!-2023/09]</span> One full paper is accepted in <a href="https://neurips.cc/Conferences/2023">NeurIPS-23</a>, about <a href="https://openreview.net/pdf?id=hSTaTBIUCj">Intricate Text-to-image Generation</a>  based on Scene Graph. 🥳</li>
-                <li> <span style="color: red;">[NEW!-2023/07]</span> One full paper is accepted in <a href="https://www.acmmm2023.org/">ACM MM-23</a>, about <a href="https://arxiv.org/pdf/2308.05095.pdf">High-faithfull Text-to-image Generation</a> enhanced with layout.</li>
+                <li> <span style="color: red;">[NEW!-2023/09]</span> One full paper is accepted in <a href="https://neurips.cc/Conferences/2023">NeurIPS-23</a>, about <a href="https://openreview.net/pdf?id=hSTaTBIUCj">Intricate Text-to-image Generation</a>  based on Scene Graph.</li>
+                <li> <span style="color: red;">[NEW!-2023/07]</span> One full paper is accepted in <a href="https://www.acmmm2023.org/">ACM MM-23</a>, about <a href="https://arxiv.org/pdf/2308.05095.pdf">High-faithful Text-to-image Generation</a> enhanced with layout planning from LLM.</li>
                 <li> <span style="color: red;">[NEW!-2023/05]</span> Two full papers is accepted in <a href='https://2023.aclweb.org/'>ACL-23</a>, about <a href='https://aclanthology.org/2023.acl-long.823.pdf'>Multimodal Relation Extraction</a> and <a href='https://aclanthology.org/2023.acl-long.146.pdf'>Image Captioning.</a></li>
                 <li> <span style="color: red;">[NEW!-2022/07]</span> I'm heading to <a href="https://www.comp.nus.edu.sg/">SoC NUS</a> to pursue my PhD—a new journey and fresh challenges await! 🙃</a></li>
               </td>
@@ -379,7 +379,7 @@
                   <td width="100%">
                     <ul>
                       <li>
-                        Yaoting Wang, <strong>Shengqiong Wu</strong>, Yuecheng Zhang, William Wang, Ziwei Liu, Jiebo Luo, Hao Fei, Shuicheng Yan.&nbsp&nbsp<em>Multimodal Chain-of-Thought Reasoning: A Comprehensive Survey</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://github.com/yaotingwangofficial/Awesome-MCoT">[Code]</a><a href="https://arxiv.org/abs/2503.12605">[pdf]</a>
+                        Yaoting Wang, <strong>Shengqiong Wu</strong>, Yuechen Zhang, William Wang, Ziwei Liu, Jiebo Luo, Hao Fei.&nbsp&nbsp<em>Multimodal Chain-of-Thought Reasoning: A Comprehensive Survey</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://github.com/yaotingwangofficial/Awesome-MCoT">[Code]</a><a href="https://arxiv.org/abs/2503.12605">[pdf]</a>
                       </li>
                       <li>
                         <strong>Shengqiong Wu</strong>, Hao Fei, Xiangtai Li, Jiayi Ji, Hanwang Zhang, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>Towards Semantic Equivalence of Tokenization in Multimodal LLM</em>. <strong>ICLR</strong>. 2025.&nbsp&nbsp<a href="https://chocowu.github.io/SeTok-web/">[Code]</a><a href="https://arxiv.org/pdf/2406.05127">[pdf]</a>
@@ -477,18 +477,18 @@
                     <li>
                       <strong>Shengqiong Wu</strong></u>, Hao Fei,  Yafeng Ren, Donghong Ji, Jingye Li.&nbsp&nbsp<em>Learn from Syntax: Improving Pair-wise Aspect and Opinion Terms Extraction with Rich Syntactic Knowledge</em>. In Proceedings of <strong>IJCAI</strong>. 2021.&nbsp&nbsp(long, online) <a href="https://github.com/ChocoWu/Synfue-PAOTE">[Code]</a><a href="https://arxiv.org/pdf/2105.02520.pdf">[pdf]</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <strong>Shengqiong Wu</strong>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.&nbsp&nbsp<em> High-order Pair-wise Aspectand Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</em>.  IEEE/ACM <strong>TASLP</strong>. 2021. <a href="https://github.com/ChocoWu/ESGCN-AOP">[Code]</a><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9478183">[pdf]</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                       <strong>Shengqiong Wu</strong>, Bobo Li, Dongdong Xie, Chong Teng and Donghong Ji.&nbsp&nbsp<em>Neural Transition Model for Aspect-based Sentiment Triplet Extraction with Triplet Memory</em>. <strong>Neurocomputing</strong>. 2021.&nbsp&nbsp <a href="https://www.sciencedirect.com/science/article/pii/S0925231221011887">[pdf]</a>
-                    </li>
+                    </li> -->
                   </ul>
                   </td>
                 </tr>
 
 
-                <tr>
+                <!-- <tr>
                   <td width="100%"><strong>2020</strong></td>
                 </tr>
                 <tr>
@@ -497,7 +497,7 @@
                       <strong>ShengqiongWu</strong>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral) <a href="https://github.com/ChocoWu/ALD-TN">[Code]</a><a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60450-9_54">[pdf]</a>
                     </li>
                   </ul></td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
@@ -583,9 +583,20 @@
             <tr>
               <td width="90%">
                   <br>
+                  Dec. 2024 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kauishou</b></a>, Remote<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp VGI Research Intern <br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://ywcmaike.github.io/"> Weicai Ye</a>, <a href="https://xinntao.github.io/">Xintao Wang</a> <br>
+              </td>
+  
+              <td width="30%">
+                    <img src="images/kuaishou.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+              </td>
+            </tr>
+            <tr>
+              <td width="90%">
+                  <br>
                   Nov. 2023 - Jun. 2024 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 2050 Research Intern <br>
-                    <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <i>Crawl web-data related to financial stock. Construct knowledge graph for Smart Q&A. Employ graph database (Neo4j) for data storage.</i><br> -->
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://yanshuicheng.info/"> Shuicheng Yan, Director </a> <br>
               </td>
   
@@ -640,7 +651,8 @@
             <td width="100%" valign="middle">
               <li>[2025] &nbsp&nbsp Dean's Graduate Research Excellence Award. NUS. </li>
               <li>[2024] &nbsp&nbsp Google PhD Fellowship. Google.</li>
-              <!-- <li>[2024] &nbsp&nbsp <a href="https://www.sohu.com/a/754077156_132450">Scholarship (Top 10 Global Recipients)</a>, Baidu.</li> -->
+              <li>[2024] &nbsp&nbsp ByteDance Scholarship, ByteDance.</li>
+              <li>[2024] &nbsp&nbsp Baidu Scholarship, Baidu.</li>
               <li>[2023] &nbsp&nbsp Research Achievement Award of SoC, NUS.</li>
               <li>[2022] &nbsp&nbsp President's Graduate Fellowship of NUS.</li>
               <li>[2022] &nbsp&nbsp Award of Excellent Master Thesis of Hubei Cyberspace Security Society.</li>
