--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                               Ph.D. Candidate <br>
                               NExT++ Research Center<br>
                               National University of Singapore<br>
+                              <br>
                               <a href="mailto:sqwu@u.nus.edu">
                                 <i class="fa fa-envelope" aria-hidden="true" style="font-size: 24px;"></i>
                               </a>
@@ -315,9 +316,9 @@
             <p>I am currently a third-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
             </p>
             <p>
-              My research interest mainly lies in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
-              Previously, I focused on syntax-aided NLP, i.e., employing external syntactic and linguistic representation to aid NLP tasks.
-            </p> 
+              My research revolves around <strong>Multimodal Understanding</strong> and <strong>Multimodal Generation</strong>, with a major focus on <strong>Multimodal Large Language Models</strong> and <strong>Scene Graph Modeling</strong>.
+              Also, certain part of my intearest has been paid on Natural Language Processing.
+            </p>  
           </div>
       </div>
   </div>
@@ -335,7 +336,7 @@
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
             <tr>
               <td width="100%" valign="middle">
-                <li> <span style="color: red;">[NEW!-2025/03]</span> We release a <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> survey, welcom to star✨✨. </li>
+                <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
                 <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
                 <li> <span style="color: red;">[NEW!-2025/02]</span> Welcome to <a href="https://ssnlp-website.github.io/ssnlp25/">SSNLP-25</a>, Free Registration!!!</li>
                 <li> <span style="color: red;">[NEW!-2024/12]</span> 🥳 I maintain a github repo focusing on  <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">Awesome-Scene-Graph-Generation-and-Application</a>. Welcome to check it out, contribute, and share any resources or insights related to scene graph generation!</li>
@@ -589,7 +590,7 @@
               </td>
   
               <td width="30%">
-                    <img src="images/kuaishou.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                    <img src="images/kuaishou.png" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
               </td>
             </tr>
             <tr>
@@ -627,7 +628,7 @@
                 </td>
     
                 <td width="30%">
-                      <img src="images/yitu.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                      <img src="images/yitu.png" width="120%" style="display: block; margin-left: auto; margin-right: auto;">
                 </td>
             </tr>
           </tbody>
@@ -758,11 +759,11 @@
 </section>
 
 
-<footer class="py-3 bg-dark">
-  <div class="container" style="text-align: center;">
+<footer class="py-1 bg-dark">
+  <div class="container" style="text-align: center;margin-top: 10px;">
       <!--        <a href="https://twitter.com/to-be-confirmed"><i class="fa fa-twitter fa-2x"></i></a>-->
       <!--        <a href="#"><i class="fa fa-facebook fa-2x"></i></a>-->
-      <p><span style="color: rgb(255, 255, 255); ">Copyright &copy; me
+      <p><span style="color: rgb(255, 255, 255); ">Copyright &copy; Shengqiong Wu 2025</span>
       </p>
   </div>
 </footer>
